--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,66 +46,66 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>Guachochi</td>\n",
-       "      <td>Guachochi is a city in the south-western porti...</td>\n",
-       "      <td>Guachochi is a city in the south-western  Chih...</td>\n",
+       "      <td>Johan August Arfwedson</td>\n",
+       "      <td>Johan August Arfwedson (12 January 1792 – 28 O...</td>\n",
+       "      <td>Johan August Arfwedson (12 January 1792 – 28 O...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>Around the Fur</td>\n",
-       "      <td>Around the Fur is the second studio album by t...</td>\n",
-       "      <td>Around the Fur is the second Studio Album by A...</td>\n",
+       "      <td>Kokarit frog</td>\n",
+       "      <td>Humerana lateralis is a species of frog in the...</td>\n",
+       "      <td>The Kokarit frog, meng-yang frog, yellow frog,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>Thunbergia</td>\n",
-       "      <td>Thunbergia is a genus of flowering plants in t...</td>\n",
-       "      <td>Thunbergia Retz. is a genus of flowering plant...</td>\n",
+       "      <td>Moundou</td>\n",
+       "      <td>Moundou (Arabic: موندو) is the second-largest ...</td>\n",
+       "      <td>Moundou is the capital of the Logone Occidenta...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>Whaler</td>\n",
-       "      <td>A whaler or whaling ship is a specialized vess...</td>\n",
-       "      <td>A whaler is a person who hunts whales, or the ...</td>\n",
+       "      <td>Kamrieng District</td>\n",
+       "      <td>Kamrieng (Khmer: កំរៀង) is a district (srok) o...</td>\n",
+       "      <td>Kamrieng District (Khmer: កំរៀង) is a district...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>On the Beach (Chris Rea album)</td>\n",
-       "      <td>On the Beach is the eighth studio album by Bri...</td>\n",
-       "      <td>On the Beach is the eighth studio album by Eng...</td>\n",
+       "      <td>Mother 1 + 2</td>\n",
+       "      <td>Mother (known as EarthBound outside Japan) is ...</td>\n",
+       "      <td>Mother 1 + 2 is a video game for the Game Boy ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id                           title  \\\n",
-       "0   1                       Guachochi   \n",
-       "1   2                  Around the Fur   \n",
-       "2   3                      Thunbergia   \n",
-       "3   4                          Whaler   \n",
-       "4   5  On the Beach (Chris Rea album)   \n",
+       "   id                   title  \\\n",
+       "0   1  Johan August Arfwedson   \n",
+       "1   2            Kokarit frog   \n",
+       "2   3                 Moundou   \n",
+       "3   4       Kamrieng District   \n",
+       "4   5            Mother 1 + 2   \n",
        "\n",
        "                                          input_text  \\\n",
-       "0  Guachochi is a city in the south-western porti...   \n",
-       "1  Around the Fur is the second studio album by t...   \n",
-       "2  Thunbergia is a genus of flowering plants in t...   \n",
-       "3  A whaler or whaling ship is a specialized vess...   \n",
-       "4  On the Beach is the eighth studio album by Bri...   \n",
+       "0  Johan August Arfwedson (12 January 1792 – 28 O...   \n",
+       "1  Humerana lateralis is a species of frog in the...   \n",
+       "2  Moundou (Arabic: موندو) is the second-largest ...   \n",
+       "3  Kamrieng (Khmer: កំរៀង) is a district (srok) o...   \n",
+       "4  Mother (known as EarthBound outside Japan) is ...   \n",
        "\n",
        "                                         target_text  \n",
-       "0  Guachochi is a city in the south-western  Chih...  \n",
-       "1  Around the Fur is the second Studio Album by A...  \n",
-       "2  Thunbergia Retz. is a genus of flowering plant...  \n",
-       "3  A whaler is a person who hunts whales, or the ...  \n",
-       "4  On the Beach is the eighth studio album by Eng...  "
+       "0  Johan August Arfwedson (12 January 1792 – 28 O...  \n",
+       "1  The Kokarit frog, meng-yang frog, yellow frog,...  \n",
+       "2  Moundou is the capital of the Logone Occidenta...  \n",
+       "3  Kamrieng District (Khmer: កំរៀង) is a district...  \n",
+       "4  Mother 1 + 2 is a video game for the Game Boy ...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,16 +128,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 460 entries, 0 to 459\n",
+      "RangeIndex: 464 entries, 0 to 463\n",
       "Data columns (total 4 columns):\n",
       " #   Column       Non-Null Count  Dtype \n",
       "---  ------       --------------  ----- \n",
-      " 0   id           460 non-null    int64 \n",
-      " 1   title        460 non-null    object\n",
-      " 2   input_text   460 non-null    object\n",
-      " 3   target_text  457 non-null    object\n",
+      " 0   id           464 non-null    int64 \n",
+      " 1   title        464 non-null    object\n",
+      " 2   input_text   464 non-null    object\n",
+      " 3   target_text  462 non-null    object\n",
       "dtypes: int64(1), object(3)\n",
-      "memory usage: 14.5+ KB\n"
+      "memory usage: 14.6+ KB\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,24 +156,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    457.000000\n",
-       "mean       2.932721\n",
-       "std        4.120004\n",
-       "min        0.086483\n",
-       "25%        1.000000\n",
-       "50%        1.561404\n",
-       "75%        3.332722\n",
+       "count    905.000000\n",
+       "mean       2.936627\n",
+       "std        3.736169\n",
+       "min        0.080556\n",
+       "25%        1.014815\n",
+       "50%        1.671756\n",
+       "75%        3.525974\n",
        "max       45.765625\n",
        "Name: compression_ratio, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "Name: 68, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,17 +347,17 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 270 entries, 0 to 459\n",
+      "Index: 560 entries, 0 to 909\n",
       "Data columns (total 5 columns):\n",
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
-      " 0   id                 270 non-null    int64  \n",
-      " 1   title              270 non-null    object \n",
-      " 2   input_text         270 non-null    object \n",
-      " 3   target_text        270 non-null    object \n",
-      " 4   compression_ratio  270 non-null    float64\n",
+      " 0   id                 560 non-null    int64  \n",
+      " 1   title              560 non-null    object \n",
+      " 2   input_text         560 non-null    object \n",
+      " 3   target_text        560 non-null    object \n",
+      " 4   compression_ratio  560 non-null    float64\n",
       "dtypes: float64(1), int64(1), object(3)\n",
-      "memory usage: 12.7+ KB\n"
+      "memory usage: 26.2+ KB\n"
      ]
     }
    ],
