modify dataset building to fetch random articles dynamically

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "4  Mother 1 + 2 is a video game for the Game Boy ...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -128,16 +128,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 464 entries, 0 to 463\n",
+      "RangeIndex: 1385 entries, 0 to 1384\n",
       "Data columns (total 4 columns):\n",
       " #   Column       Non-Null Count  Dtype \n",
       "---  ------       --------------  ----- \n",
-      " 0   id           464 non-null    int64 \n",
-      " 1   title        464 non-null    object\n",
-      " 2   input_text   464 non-null    object\n",
-      " 3   target_text  462 non-null    object\n",
+      " 0   id           1385 non-null   int64 \n",
+      " 1   title        1385 non-null   object\n",
+      " 2   input_text   1385 non-null   object\n",
+      " 3   target_text  1378 non-null   object\n",
       "dtypes: int64(1), object(3)\n",
-      "memory usage: 14.6+ KB\n"
+      "memory usage: 43.4+ KB\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,24 +156,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/am/miniforge3/lib/python3.11/site-packages/pandas/core/nanops.py:1016: RuntimeWarning: invalid value encountered in subtract\n",
+      "  sqr = _ensure_numeric((avg - values) ** 2)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "count    905.000000\n",
-       "mean       2.936627\n",
-       "std        3.736169\n",
-       "min        0.080556\n",
-       "25%        1.014815\n",
-       "50%        1.671756\n",
-       "75%        3.525974\n",
-       "max       45.765625\n",
+       "count    926.000000\n",
+       "mean            inf\n",
+       "std             NaN\n",
+       "min        0.036534\n",
+       "25%        1.075848\n",
+       "50%        1.802617\n",
+       "75%        3.427325\n",
+       "max             inf\n",
        "Name: compression_ratio, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,21 +192,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "id                                                                  69\n",
-       "title                            List of songs recorded by Demi Lovato\n",
-       "input_text           American singer Demi Lovato has recorded mater...\n",
-       "target_text          This is a list of songs recorded by American s...\n",
-       "compression_ratio                                            45.765625\n",
-       "Name: 68, dtype: object"
+       "id                                                                 505\n",
+       "title                                               Black widow pulsar\n",
+       "input_text           The Black Widow Pulsar (PSR B1957+20) is an ec...\n",
+       "target_text                                                           \n",
+       "compression_ratio                                                  inf\n",
+       "Name: 504, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -262,84 +270,84 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Guachochi</td>\n",
-       "      <td>Guachochi is a city in the south-western porti...</td>\n",
-       "      <td>Guachochi is a city in the south-western  Chih...</td>\n",
-       "      <td>1.404145</td>\n",
+       "      <th>62</th>\n",
+       "      <td>63</td>\n",
+       "      <td>Red Star F.C.</td>\n",
+       "      <td>Red Star Football Club (French pronunciation: ...</td>\n",
+       "      <td>Red Star F.C. 93 is a football club which play...</td>\n",
+       "      <td>27.724138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Around the Fur</td>\n",
-       "      <td>Around the Fur is the second studio album by t...</td>\n",
-       "      <td>Around the Fur is the second Studio Album by A...</td>\n",
-       "      <td>4.220930</td>\n",
+       "      <th>471</th>\n",
+       "      <td>472</td>\n",
+       "      <td>Haakon IV</td>\n",
+       "      <td>Haakon IV Haakonsson (c. March/April 1204 – 16...</td>\n",
+       "      <td>Haakon IV Haakonsson is known as King of Norwa...</td>\n",
+       "      <td>24.523256</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Thunbergia</td>\n",
-       "      <td>Thunbergia is a genus of flowering plants in t...</td>\n",
-       "      <td>Thunbergia Retz. is a genus of flowering plant...</td>\n",
-       "      <td>1.696154</td>\n",
+       "      <th>573</th>\n",
+       "      <td>574</td>\n",
+       "      <td>Valenzuela, Philippines</td>\n",
+       "      <td>Valenzuela (, Tagalog: [valensˈwela]), officia...</td>\n",
+       "      <td>Valenzuela is a city in the Philippines. It is...</td>\n",
+       "      <td>24.169014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>On the Beach (Chris Rea album)</td>\n",
-       "      <td>On the Beach is the eighth studio album by Bri...</td>\n",
-       "      <td>On the Beach is the eighth studio album by Eng...</td>\n",
-       "      <td>1.320413</td>\n",
+       "      <th>279</th>\n",
+       "      <td>280</td>\n",
+       "      <td>Lynx (constellation)</td>\n",
+       "      <td>Lynx is a constellation named after the animal...</td>\n",
+       "      <td>Lynx is a constellation in the northern sky.</td>\n",
+       "      <td>23.909091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Carl Adolph Agardh</td>\n",
-       "      <td>Carl Adolph Agardh (23 January 1785 in Båstad,...</td>\n",
-       "      <td>Carl Adolph Agardh was a Swedish botanist and ...</td>\n",
-       "      <td>1.612613</td>\n",
+       "      <th>58</th>\n",
+       "      <td>59</td>\n",
+       "      <td>1975 Formula One season</td>\n",
+       "      <td>The 1975 Formula One season was the 29th seaso...</td>\n",
+       "      <td>The 1975 Formula One season saw Niki Lauda cro...</td>\n",
+       "      <td>21.174603</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id                           title  \\\n",
-       "0   1                       Guachochi   \n",
-       "1   2                  Around the Fur   \n",
-       "2   3                      Thunbergia   \n",
-       "4   5  On the Beach (Chris Rea album)   \n",
-       "6   7              Carl Adolph Agardh   \n",
+       "      id                    title  \\\n",
+       "62    63            Red Star F.C.   \n",
+       "471  472                Haakon IV   \n",
+       "573  574  Valenzuela, Philippines   \n",
+       "279  280     Lynx (constellation)   \n",
+       "58    59  1975 Formula One season   \n",
        "\n",
-       "                                          input_text  \\\n",
-       "0  Guachochi is a city in the south-western porti...   \n",
-       "1  Around the Fur is the second studio album by t...   \n",
-       "2  Thunbergia is a genus of flowering plants in t...   \n",
-       "4  On the Beach is the eighth studio album by Bri...   \n",
-       "6  Carl Adolph Agardh (23 January 1785 in Båstad,...   \n",
+       "                                            input_text  \\\n",
+       "62   Red Star Football Club (French pronunciation: ...   \n",
+       "471  Haakon IV Haakonsson (c. March/April 1204 – 16...   \n",
+       "573  Valenzuela (, Tagalog: [valensˈwela]), officia...   \n",
+       "279  Lynx is a constellation named after the animal...   \n",
+       "58   The 1975 Formula One season was the 29th seaso...   \n",
        "\n",
-       "                                         target_text  compression_ratio  \n",
-       "0  Guachochi is a city in the south-western  Chih...           1.404145  \n",
-       "1  Around the Fur is the second Studio Album by A...           4.220930  \n",
-       "2  Thunbergia Retz. is a genus of flowering plant...           1.696154  \n",
-       "4  On the Beach is the eighth studio album by Eng...           1.320413  \n",
-       "6  Carl Adolph Agardh was a Swedish botanist and ...           1.612613  "
+       "                                           target_text  compression_ratio  \n",
+       "62   Red Star F.C. 93 is a football club which play...          27.724138  \n",
+       "471  Haakon IV Haakonsson is known as King of Norwa...          24.523256  \n",
+       "573  Valenzuela is a city in the Philippines. It is...          24.169014  \n",
+       "279       Lynx is a constellation in the northern sky.          23.909091  \n",
+       "58   The 1975 Formula One season saw Niki Lauda cro...          21.174603  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "large_summaries.head()"
+    "large_summaries.sort_values(\"compression_ratio\", ascending=False).head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -347,17 +355,17 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 560 entries, 0 to 909\n",
+      "Index: 597 entries, 1 to 929\n",
       "Data columns (total 5 columns):\n",
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
-      " 0   id                 560 non-null    int64  \n",
-      " 1   title              560 non-null    object \n",
-      " 2   input_text         560 non-null    object \n",
-      " 3   target_text        560 non-null    object \n",
-      " 4   compression_ratio  560 non-null    float64\n",
+      " 0   id                 597 non-null    int64  \n",
+      " 1   title              597 non-null    object \n",
+      " 2   input_text         597 non-null    object \n",
+      " 3   target_text        597 non-null    object \n",
+      " 4   compression_ratio  597 non-null    float64\n",
       "dtypes: float64(1), int64(1), object(3)\n",
-      "memory usage: 26.2+ KB\n"
+      "memory usage: 28.0+ KB\n"
      ]
     }
    ],
